app-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata: 
  name: synergychat-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
