api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synergychat-api-service
spec:
  type: ClusterIP
  selector:
    app: synergychat-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
