crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synergychat-crawler-service
spec:
  type: ClusterIP
  selector:
    app: synergychat-crawler
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
