app-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: synergychat-gateway
spec:
  gatewayClassName: synergychat-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
